# Noey

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESKTOP_VIDEO_APP_REQUIREMENTS.md  EFFECTS_USER_GUIDE.md  PROJECT_REQUIREMENTS.md  REMOTION_EFFECTS_REQUIREMENTS.md  docker-compose.yml
backend/: .dockerignore  .env.production  Dockerfile  alembic.ini  pyproject.toml
backend/scripts/: check_project.py  click_chest.py  e2e_video.py  fetch_models.py  generate_sfx.py  generate_stickers.py  measure_dub_prompt.py  migrate_to_multitenant.py  probe_claude_vision.py  probe_stream_thinking.py  probe_ui.py  seed_demo.py  shot.py  shot_room.py  upload_desktop_release.py  vision_smoke_test.py
backend/services/api/: chat_service.py  csv_importer.py  deps.py  main.py  queries.py  schemas.py
backend/services/modal_whisper/: app.py
backend/services/whisper/: __main__.py
backend/services/worker/: __main__.py  queue.py  tasks copy.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_beat_analysis.py  test_caption_ass.py  test_dub_ai.py  test_dub_render.py  test_dub_sample_budget.py  test_dub_video.py  test_effects_ai.py  test_effects_capcut.py  test_effects_catalog.py  test_effects_codegen.py  test_effects_render.py  test_effects_schema.py  test_effects_style.py  test_errors.py  test_face_tracker.py  test_filler_strip.py  test_formula.py  test_gemini_files_upload.py  test_llm_config.py  test_llm_gateway.py  test_llm_usage.py  test_overlay.py  test_plan_core.py  test_product_marks.py  test_s3_delete_output_file.py  test_settings.py  test_sfx.py  test_stickers.py  test_timeline_multiclip.py  test_transcribe.py  test_transcribe_refine.py  test_transforms.py  test_upserts.py  test_video_edit_timeline.py  test_video_storage.py  test_videos_local.py  test_vision_files_upload.py
desktop/sidecar/: pyinstaller_entry.py  pyproject.toml  sidecar.spec
desktop/sidecar/sidecar/: __init__.py  __main__.py  ai_reedit.py  audio.py  bootstrap.py  cli.py  dub.py  frames.py  ingest.py  jobs.py  proxy.py  timeline_render.py
desktop/sidecar/tests/: conftest.py  test_cli.py  test_dub_commands.py  test_proxy_commands.py  test_render_timeline_captions.py  test_talking_head.py
(+146 files in other folders)
