[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noey-tiktok"
version = "0.1.0"
description = "Personal analytics for a TikTok affiliate creator: Playwright scraper + FastAPI + 3D dashboard."
requires-python = ">=3.12"
dependencies = [
    # web / api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    # db
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "greenlet>=3.1",
    # scheduling
    "apscheduler>=3.11",
    # scraping
    "playwright>=1.49",
    "playwright-stealth>=1.0.6",
    # ai (provider-agnostic)
    "litellm>=1.55",
    # logging
    "structlog>=24.4",
    # auth + multi-tenancy
    "pyjwt>=2.10",
    "passlib[bcrypt]>=1.7",
    "cryptography>=44.0",
    # background workers
    "arq>=0.26",
    "redis>=5.2",
    # video editing
    "faster-whisper>=1.0",
    "ffmpeg-python>=0.2",
    "scenedetect[opencv]>=0.7",
    "Pillow>=10.0",
    "pythainlp>=5.0",
    "httpx>=0.27",
    "modal>=1.0",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["packages*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
