[project]
name = "noey-sidecar"
version = "0.1.0"
description = "Local render sidecar for the Noey desktop video-edit app (reuses backend/packages/video)"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
